--- a/antoryum_gayrimenkul/translations/tr.csv
+++ b/antoryum_gayrimenkul/translations/tr.csv
@@ -7,3 +7,5 @@ Gallery Item,Galeri Öğeleri,
 Website Stats,Website İstatistikleri,
 Antoryum Team,Antoryum Ekibi,
 Antoryum About Section,Antoryum Hakkımızda Bölümü,
+Estate Member,İlan Kullanıcısı,
+Estate Admin,İlan Yöneticisi,
